# react-rust-simple-scoreboard

./: README.md  docker-compose.yml  shell.sh
api/: .env.example  .gitignore  Cargo.toml  Dockerfile
api/migrations/: 20220616191046_setup.sql  20220616191103_create_players_table.sql
api/src/: env.rs  main.rs
api/src/http/: error.rs  mod.rs  requests.rs
api/src/http/controllers/: players.rs
api/src/models/: player.rs
web/: .gitattributes  .gitignore  Dockerfile  index.html  package.json
web/src/: App.tsx  main.tsx
web/src/components/: AddPlayer.tsx  PlayerItem.tsx  PlayerList.tsx
web/src/context/: playersContext.tsx
web/src/services/: players.ts
