[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies
tokio = { version = "1.19.2", features = ["full"] }
axum = "0.5.7"
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls" , "postgres", "uuid", "chrono" ] }
serde = { version = "1.0.137", features = ["derive"] }

# Axum builds on the types from tower
tower = "0.4.12"
tower-http = { version = "0.3.4", features = ["cors"] }

# Column types for SQLx
uuid = { version = "1.1.2", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }

# Utility crates
anyhow = "1.0.57"
rustls = "0.20.6"
serde_json = "1.0.81"
dotenv = "0.15.0"
envy = "0.4.2"
axum-macros = "0.2.2"